# biophysics

./: Exercise_07.ipynb  LICENSE  README.md  problemset6.ipynb  pyproject.toml
biophysics/: problemset3.ipynb  problemset3.py
