[project]
name = "biophysics"
version = "0.1.0"
description = "A basic Python project."
authors = [
    { name = "Rhessa Weber Langstaff", email = "rhessa.weberlangstaff@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"